// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repeater Check basic adding/removing block and attributes changing 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check basic adding/removing block and attributes changing 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"button-background-palette-color-general":3,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"button-background-palette-color-general":3,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check basic adding/removing block and attributes changing 3`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check block moving with turned on repeater 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"4 columns","row-pattern-m":"2-2-2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check block moving with turned on repeater 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"4 columns","row-pattern-m":"2-2-2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check different structure popup 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"3 columns","row-pattern-m":"2-2","max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/svg-icon-maxi -->
<div class="wp-block-maxi-blocks-svg-icon-maxi maxi-block maxi-svg-icon-block maxi-light"><div class="maxi-svg-icon-block__icon"><svg class="email-5-maxi-svg__2" width="64px" height="64px" viewBox="0 0 64 64"><style>.email-5-maxi-svg__2 .C{stroke:#081219}.email-5-maxi-svg__2 .D{stroke-width:2}.email-5-maxi-svg__2 .E{stroke-linejoin:round}.email-5-maxi-svg__2 .F{stroke-miterlimit:10}.email-5-maxi-svg__2:hover .C{stroke:#081219}.email-5-maxi-svg__2:hover .D{stroke-width:2}.email-5-maxi-svg__2:hover .E{stroke-linejoin:round}.email-5-maxi-svg__2:hover .F{stroke-miterlimit:10}</style><g fill="none" stroke-linecap="round" data-stroke class="C D E F"><path d="M10.1 30V18.3l-8.5 4.3m60.8 0l-8.5-4.3V30"/><path d="M53.9 30h0V18.3v-9l-6.7-7.6H11.5c-.8 0-1.4.6-1.4 1.4V30"/></g><path d="M43.9 22.6c0 6.6-5.3 11.9-11.9 11.9s-11.9-5.3-11.9-11.9 5.3-12 11.9-12 11.9 5.4 11.9 12zm-5.7-5c-.8-.7-2-.7-2.7.1l-5.2 5.7-1.8-1.7c-.8-.7-2-.7-2.7 0-.7.8-.7 2 0 2.7l3.2 3.1c.4.4.8.5 1.4.5h.1c.5 0 1-.2 1.4-.6l6.6-7.1c.6-.8.5-2-.3-2.7zm9-15.9v6.4c0 .7.5 1.2 1.2 1.2h5.5l-6.7-7.6z" data-fill fill="#ff4a17" data-stroke class="C D E F"/><g fill="none" data-stroke class="C D E F"><path d="M1.6 22.6v39.7l26-17zm34.85 22.7l25.95 17V22.6z"/><path d="M33.2 48.2c-.7.6-1.7.6-2.4 0l-3.2-2.9-25.9 17H32h30.4l-25.95-17-3.25 2.9z"/></g></svg></div></div>
<!-- /wp:maxi-blocks/svg-icon-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/svg-icon-maxi -->
<div class="wp-block-maxi-blocks-svg-icon-maxi maxi-block maxi-svg-icon-block maxi-light"><div class="maxi-svg-icon-block__icon"><svg class="email-list-maxi-svg__69" viewBox="0 0 64 64"><style>.email-list-maxi-svg__69 .D{stroke:#081219}.email-list-maxi-svg__69 .E{stroke-width:2}.email-list-maxi-svg__69 .F{stroke-linejoin:round}.email-list-maxi-svg__69 .G{stroke-miterlimit:10}.email-list-maxi-svg__69 .H{stroke-linecap:round}.email-list-maxi-svg__69 .I{fill:#ff4a17}.email-list-maxi-svg__69:hover .D{stroke:#081219}.email-list-maxi-svg__69:hover .E{stroke-width:2}.email-list-maxi-svg__69:hover .F{stroke-linejoin:round}.email-list-maxi-svg__69:hover .G{stroke-miterlimit:10}.email-list-maxi-svg__69:hover .H{stroke-linecap:round}.email-list-maxi-svg__69:hover .I{fill:#ff4a17}</style><g data-stroke data-fill class="D E F G I"><path d="M2.6 25.9l11.5 9.6V14.9zm47.3-11v20.6l11.5-9.6z"/><path d="M40.2 8.5L32 1.3l-9.2 7.2h17.4" class="H"/></g><g fill="none" data-stroke class="D E F G H"><path d="M40.2 8.5h3.1v6c0 .2.3.5.6.5h6m11.5 10.9v36.8H2.6V25.9M14.1 8.5h8.7m20.5 0l6.6 6.4"/><path d="M38.9 22.3h-7.4m7.4 11.9h-7.4m29.9 28.5l-23.8-17-5.6-4.1-5.7 4.1-23.7 17m11.5-27.2l12.2 10.2m23.6-10.2L37.6 45.7m-6.3-27.6h13.9M31.3 30h13.9"/></g><circle cx="23.2" cy="20.6" r="4" data-fill class="I"/><path d="M21.1 19.7l1.8 1.8m0 0l4.9-4.9" fill="none" data-stroke class="D E F G H"/><circle cx="23.2" cy="33" r="4" data-fill class="I"/><path d="M21.1 32.1l1.8 1.8m0 0l4.9-4.9M14.1 17.9V8.5" fill="none" data-stroke class="D E F G H"/></svg></div></div>
<!-- /wp:maxi-blocks/svg-icon-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"123123123"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">123123123</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check different structure popup 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"3 columns","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/svg-icon-maxi -->
<div class="wp-block-maxi-blocks-svg-icon-maxi maxi-block maxi-svg-icon-block maxi-light"><div class="maxi-svg-icon-block__icon"><svg class="email-5-maxi-svg__2" width="64px" height="64px" viewBox="0 0 64 64"><style>.email-5-maxi-svg__2 .C{stroke:#081219}.email-5-maxi-svg__2 .D{stroke-width:2}.email-5-maxi-svg__2 .E{stroke-linejoin:round}.email-5-maxi-svg__2 .F{stroke-miterlimit:10}.email-5-maxi-svg__2:hover .C{stroke:#081219}.email-5-maxi-svg__2:hover .D{stroke-width:2}.email-5-maxi-svg__2:hover .E{stroke-linejoin:round}.email-5-maxi-svg__2:hover .F{stroke-miterlimit:10}</style><g fill="none" stroke-linecap="round" data-stroke class="C D E F"><path d="M10.1 30V18.3l-8.5 4.3m60.8 0l-8.5-4.3V30"/><path d="M53.9 30h0V18.3v-9l-6.7-7.6H11.5c-.8 0-1.4.6-1.4 1.4V30"/></g><path d="M43.9 22.6c0 6.6-5.3 11.9-11.9 11.9s-11.9-5.3-11.9-11.9 5.3-12 11.9-12 11.9 5.4 11.9 12zm-5.7-5c-.8-.7-2-.7-2.7.1l-5.2 5.7-1.8-1.7c-.8-.7-2-.7-2.7 0-.7.8-.7 2 0 2.7l3.2 3.1c.4.4.8.5 1.4.5h.1c.5 0 1-.2 1.4-.6l6.6-7.1c.6-.8.5-2-.3-2.7zm9-15.9v6.4c0 .7.5 1.2 1.2 1.2h5.5l-6.7-7.6z" data-fill fill="#ff4a17" data-stroke class="C D E F"/><g fill="none" data-stroke class="C D E F"><path d="M1.6 22.6v39.7l26-17zm34.85 22.7l25.95 17V22.6z"/><path d="M33.2 48.2c-.7.6-1.7.6-2.4 0l-3.2-2.9-25.9 17H32h30.4l-25.95-17-3.25 2.9z"/></g></svg></div></div>
<!-- /wp:maxi-blocks/svg-icon-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/svg-icon-maxi -->
<div class="wp-block-maxi-blocks-svg-icon-maxi maxi-block maxi-svg-icon-block maxi-light"><div class="maxi-svg-icon-block__icon"><svg class="email-list-maxi-svg__69" viewBox="0 0 64 64"><style>.email-list-maxi-svg__69 .D{stroke:#081219}.email-list-maxi-svg__69 .E{stroke-width:2}.email-list-maxi-svg__69 .F{stroke-linejoin:round}.email-list-maxi-svg__69 .G{stroke-miterlimit:10}.email-list-maxi-svg__69 .H{stroke-linecap:round}.email-list-maxi-svg__69 .I{fill:#ff4a17}.email-list-maxi-svg__69:hover .D{stroke:#081219}.email-list-maxi-svg__69:hover .E{stroke-width:2}.email-list-maxi-svg__69:hover .F{stroke-linejoin:round}.email-list-maxi-svg__69:hover .G{stroke-miterlimit:10}.email-list-maxi-svg__69:hover .H{stroke-linecap:round}.email-list-maxi-svg__69:hover .I{fill:#ff4a17}</style><g data-stroke data-fill class="D E F G I"><path d="M2.6 25.9l11.5 9.6V14.9zm47.3-11v20.6l11.5-9.6z"/><path d="M40.2 8.5L32 1.3l-9.2 7.2h17.4" class="H"/></g><g fill="none" data-stroke class="D E F G H"><path d="M40.2 8.5h3.1v6c0 .2.3.5.6.5h6m11.5 10.9v36.8H2.6V25.9M14.1 8.5h8.7m20.5 0l6.6 6.4"/><path d="M38.9 22.3h-7.4m7.4 11.9h-7.4m29.9 28.5l-23.8-17-5.6-4.1-5.7 4.1-23.7 17m11.5-27.2l12.2 10.2m23.6-10.2L37.6 45.7m-6.3-27.6h13.9M31.3 30h13.9"/></g><circle cx="23.2" cy="20.6" r="4" data-fill class="I"/><path d="M21.1 19.7l1.8 1.8m0 0l4.9-4.9" fill="none" data-stroke class="D E F G H"/><circle cx="23.2" cy="33" r="4" data-fill class="I"/><path d="M21.1 32.1l1.8 1.8m0 0l4.9-4.9M14.1 17.9V8.5" fill="none" data-stroke class="D E F G H"/></svg></div></div>
<!-- /wp:maxi-blocks/svg-icon-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/svg-icon-maxi -->
<div class="wp-block-maxi-blocks-svg-icon-maxi maxi-block maxi-svg-icon-block maxi-light"><div class="maxi-svg-icon-block__icon"><svg class="email-5-maxi-svg__2" width="64px" height="64px" viewBox="0 0 64 64"><style>.email-5-maxi-svg__2 .C{stroke:#081219}.email-5-maxi-svg__2 .D{stroke-width:2}.email-5-maxi-svg__2 .E{stroke-linejoin:round}.email-5-maxi-svg__2 .F{stroke-miterlimit:10}.email-5-maxi-svg__2:hover .C{stroke:#081219}.email-5-maxi-svg__2:hover .D{stroke-width:2}.email-5-maxi-svg__2:hover .E{stroke-linejoin:round}.email-5-maxi-svg__2:hover .F{stroke-miterlimit:10}</style><g fill="none" stroke-linecap="round" data-stroke class="C D E F"><path d="M10.1 30V18.3l-8.5 4.3m60.8 0l-8.5-4.3V30"/><path d="M53.9 30h0V18.3v-9l-6.7-7.6H11.5c-.8 0-1.4.6-1.4 1.4V30"/></g><path d="M43.9 22.6c0 6.6-5.3 11.9-11.9 11.9s-11.9-5.3-11.9-11.9 5.3-12 11.9-12 11.9 5.4 11.9 12zm-5.7-5c-.8-.7-2-.7-2.7.1l-5.2 5.7-1.8-1.7c-.8-.7-2-.7-2.7 0-.7.8-.7 2 0 2.7l3.2 3.1c.4.4.8.5 1.4.5h.1c.5 0 1-.2 1.4-.6l6.6-7.1c.6-.8.5-2-.3-2.7zm9-15.9v6.4c0 .7.5 1.2 1.2 1.2h5.5l-6.7-7.6z" data-fill fill="#ff4a17" data-stroke class="C D E F"/><g fill="none" data-stroke class="C D E F"><path d="M1.6 22.6v39.7l26-17zm34.85 22.7l25.95 17V22.6z"/><path d="M33.2 48.2c-.7.6-1.7.6-2.4 0l-3.2-2.9-25.9 17H32h30.4l-25.95-17-3.25 2.9z"/></g></svg></div></div>
<!-- /wp:maxi-blocks/svg-icon-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check repeater columns validation on toggle when first column has content 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-4-1","row-pattern-m":"1-1-1","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"1.4.1","maxi-version-origin":"1.4.1","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;
